Try fix image paths for integrations example

--- a/docs/docs/patterns/actionsbar.mdx
+++ b/docs/docs/patterns/actionsbar.mdx
@@ -64,4 +64,4 @@ There are two blocks that you can populate with actions: `actions_left` and `act
 
 The `actions_left` block will typically contain only the `html.actions_menu` dropdown helper, detailed below.
 
-The `actions_right` block will typically contain <a href="/views/components/buttons">buttons</a> illustrating the primary action(s) for a given UI, but may also use <a href="/views/components/button-groups">button groups</a> and/or <a href="/views/components/dropdowns">dropdowns</a> if suitable.
+The `actions_right` block will typically contain [buttons](/docs/components/button) illustrating the primary action(s) for a given UI, but may also use [button groups](/docs/components/button-group) and/or [dropdown buttons](/docs/components/dropdown-button) if suitable.
