Fix image paths

--- a/docs/docs/patterns/integrations.mdx
+++ b/docs/docs/patterns/integrations.mdx
@@ -21,7 +21,7 @@ The tabs content is marked up as a standard media object, using Pulsar’s `html
 
 <div className="d-example">
   <div className="media">
-    <img src="assets/office365.png" alt="Office365 logo" className="media__image" />
+    <img src="/pulsar/assets/office365.png" alt="Office365 logo" className="media__image" />
     <div className="media__body">
       <p>Office 365</p>
       <span className="small-type">Access Outlook calendars within your CMS</span>
@@ -111,7 +111,7 @@ The description is a single line to provide extra information about what the int
   <div className="d-guidelines__block d-guidelines__block--do">
     <div className="d-guidelines-preview">
       <div className="media">
-      <img src="assets/office365.png" alt="Office365 logo" className="media__image" />
+      <img src="/pulsar/assets/office365.png" alt="Office365 logo" className="media__image" />
       <div className="media__body">
         <p>Office 365</p>
         <span className="small-type">Access Outlook calendars within your CMS</span>
@@ -124,7 +124,7 @@ The description is a single line to provide extra information about what the int
   <div className="d-guidelines__block d-guidelines__block--not">
     <div className="d-guidelines-preview">
       <div className="media">
-        <img src="assets/office365.png" alt="Office365 logo" className="media__image" />
+        <img src="/pulsar/assets/office365.png" alt="Office365 logo" className="media__image" />
         <div className="media__body">
           <p>Office 365</p>
           <span className="small-type">Enable Office365 integration</span>
