--- a/docs/docs/patterns/common-list.mdx
+++ b/docs/docs/patterns/common-list.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 The common list user interface pattern is the most frequent pattern used to display a paginated collection of ‘Things’, with related actions which can manipulate that collection.
 
-![Screenshot showing common list example](assets/common-list-2x.png)
+![Screenshot showing common list example](/img/common-list-2x.png)
 
 ## Titles
 
