--- a/docs/docs/patterns/disabled-ui.mdx
+++ b/docs/docs/patterns/disabled-ui.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 The Disabled UI pattern allows you to prevent the user from interacting with parts of a UI. This can be useful when an external action needs completing before the UI can be used. A message should be shown advising the user what action needs to be taken.
 
-![Screenshot showing disabled UI example](assets/disabled-ui.png)
+![Screenshot showing disabled UI example](/img/disabled-ui.png)
 
 ## Dependencies
 
