--- a/docs/docs/patterns/filter-bar.mdx
+++ b/docs/docs/patterns/filter-bar.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 The filter bar pattern allows you to build up a list of filters to be applied to a UI. Commonly used to filter tabular data as an alternative to displaying a potentially large form.
 
-![Screenshot showing filterbar interaction](assets/filterbar.gif)
+![Screenshot showing filterbar interaction](/img/filterbar.gif)
 
 ## Dependencies
 
