--- a/docs/docs/components/panel.mdx
+++ b/docs/docs/components/panel.mdx
@@ -57,15 +57,39 @@ Display important information in a prominent container.
 
 You can configure this helper using the common helper options, the following options are specific to this helper.
 
-| Option | Type | Description |
-| ------ | ---- | ----------- |
-| active_item | int | The index of the active item, will have the `is-active` class applied |
-| items | hash | A hash of links formatted by `{ 'label': 'href' } |
-| type | string | Markup scheme to use: `ul` (default), `ol`, `div` or `link` |
+Option  | Type   | Description
+------- | ------ | --------------------------------------------------------------
+actions | array  | An array of `html.button` options to be displayed within the panel
+actions_position | string | Position of the actions, `left` (default), `inline`, `center`, `right`
+body    | string | The main content of the panel
+class   | string | CSS classes, space separated
+icon    | string | Icon to display next to the panel title
+id      | string | A unique identifier, if required
+title   | string | The title of the panel
+data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
 
-## Setting the active item
+## Title
 
-The list link is indexed (indexed by one), you can pass the index of the item you would like to be marked as active and it will have the `.is-active` class applied. You will need to style this active class yourself.
+The title is optional and will be displayed next to the optional `icon`. You should carefully choose your title to quickly summarise the information or choice the panel is presenting to the user.
+
+:::tip
+A panel without a title will render as a `div`, not a `section`
+:::
+
+## Icon
+
+You can choose any icon to reinforce the visual distinction of the panel, you will need to carefully consider the appropriate icon to pair with any panel state class you may be providing. It’s not a good idea to use an error icon with a success state, for example.
+
+## Actions
+
+A panel can contain optional calls to action which allow the user to act on the 
+important information the panel is bringing to their attention.
+
+Pass a hash of key:value pairs to the `actions` and they'll be rendered as buttons, the available options are the same as the regular button helper.
+
+:::tip
+You can also pass fully-formed HTML instead of a hash if you need to render anything other than a button
+:::
 
 <Tabs
   groupID="example"
@@ -79,13 +103,22 @@ The list link is indexed (indexed by one), you can pass the index of the item yo
 
 ```twig
 {{
-  html.link_list({
-    'active_item': 2,
-    'items': {
-      'Value one': '#href_one',
-      'Value two (will be active)': '#href_two',
-      'Value three': '#href_three'
-    }
+  html.panel({
+    'title': 'Default (left) placement',
+    'icon': 'info-sign',
+    'body': 'You need to do a thing.',
+    'actions': [
+      {
+        'label': 'Don’t Do The Thing',
+        'class': 'btn--outline btn--small btn--inverse'
+      },
+      {
+        'label': 'Do The Thing',
+        'class': 'btn--outline btn--small btn--inverse',
+        'type': 'link',
+        'href': '/path/to/action'
+      }
+    ]
   })
 }}
 ```
@@ -94,18 +127,28 @@ The list link is indexed (indexed by one), you can pass the index of the item yo
 <TabItem value="html">
 
 ```html
-<ul>
-  <li>
-    <a href="#href_one">Value one</a>
-  </li>
-  <li class="is-active">
-    <a href="#href_two">Value two (will be active)</a>
-  </li>
-  <li>
-    <a href="#href_three">Value three</a>
-  </li>
-</ul>
+<section class="panel" aria-labelledby="guid-949891478">
+  <i aria-hidden="true" class="icon-info-sign panel__icon"></i>
+  <h2 class="panel__title" id="guid-949891478">Default (left) placement</h2>
+  <div class="panel__body">You need to do a thing.</div>
+  <div class="panel__actions">
+    <button class="btn btn--outline btn--small btn--inverse">Don’t Do The Thing</button>
+    <a href="/path/to/action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
+  </div>
+</section>
 ```
 
 </TabItem>
 </Tabs>
+
+<div className="d-example">
+<section class="panel" aria-labelledby="guid-949891478">
+  <i aria-hidden="true" class="icon-info-sign panel__icon"></i>
+  <h2 class="panel__title" id="guid-949891478">Default (left) placement</h2>
+  <div class="panel__body">You need to do a thing.</div>
+  <div class="panel__actions">
+    <button class="btn btn--outline btn--small btn--inverse">Don’t Do The Thing</button>
+    <a href="/path/to/action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
+  </div>
+</section>
+</div>
