--- a/docs/docs/components/panel.mdx
+++ b/docs/docs/components/panel.mdx
@@ -116,7 +116,7 @@ You can also pass fully-formed HTML instead of a hash if you need to render anyt
         'label': 'Do The Thing',
         'class': 'btn--outline btn--small btn--inverse',
         'type': 'link',
-        'href': '/path/to/action'
+        'href': '#path-to-action'
       }
     ]
   })
@@ -133,7 +133,7 @@ You can also pass fully-formed HTML instead of a hash if you need to render anyt
   <div class="panel__body">You need to do a thing.</div>
   <div class="panel__actions">
     <button class="btn btn--outline btn--small btn--inverse">Don’t Do The Thing</button>
-    <a href="/path/to/action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
+    <a href="#path-to-action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
   </div>
 </section>
 ```
@@ -148,7 +148,7 @@ You can also pass fully-formed HTML instead of a hash if you need to render anyt
   <div class="panel__body">You need to do a thing.</div>
   <div class="panel__actions">
     <button class="btn btn--outline btn--small btn--inverse">Don’t Do The Thing</button>
-    <a href="/path/to/action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
+    <a href="#path-to-action" class="btn btn--outline btn--small btn--inverse">Do The Thing</a>
   </div>
 </section>
 </div>
